--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,8 +12,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
 monitor=Unknown-1,disabled
-monitor=eDP-1,2048x1280@120,auto,1,bitdepth,10
-monitor=DP-1,3840x2560@60,auto,1.33334,bitdepth,10
+monitor=eDP-1,2048x1280@60,auto,1
+monitor=DP-1,3840x2560@59.98400,auto,1.33334
+#monitor=HDMI-A-1,1920x1080@59.98400,auto,1
+#monitor=eDP-1,2048x1280@60,auto,1,bitdepth,10
+#monitor=DP-1,3840x2560@59.98400,auto,1
+#monitor=DP-1,3840x2560@60,auto,1.33334
 #monitor=DP-1,3840x2560@60,auto,1.066667
 
 
