--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,8 +1,4 @@
-# Refer to the wiki for more information.
 # https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
 ################
@@ -16,8 +12,6 @@ monitor=eDP-1,2048x1280@60,auto,1
 monitor=DP-1,3840x2560@59.98400,auto,1.33334
 #monitor=HDMI-A-1,1920x1080@59.98400,auto,1
 #monitor=eDP-1,2048x1280@60,auto,1,bitdepth,10
-#monitor=DP-1,3840x2560@59.98400,auto,1
-#monitor=DP-1,3840x2560@60,auto,1.33334
 #monitor=DP-1,3840x2560@60,auto,1.066667
 
 
@@ -42,12 +36,11 @@ $menu = rofi -show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = ~/.config/hypr/scripts/xdph.sh
-exec-once = ~/.config/hypr/scripts/hyprpaper.sh
-exec-once = ~/.config/hypr/scripts/waybar.sh
-exec-once = ~/.config/hypr/scripts/nm-applet.sh
+exec-once = ~/.config/hypr/scripts/once.sh
 exec-once = [workspace 1 silent] $terminal
-exec-once = [workspace 6 silent] $browser
+exec-once = [workspace 7 silent] $browser
+
+##systemctl --user enable --now hypridle.service
 
 
 #############################
@@ -58,6 +51,7 @@ exec-once = [workspace 6 silent] $browser
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XDG_CURRENT_DESKTOP,Hyprland
 
 
 #####################
@@ -71,7 +65,7 @@ general {
     gaps_in = 3
     gaps_out = 6
 
-    border_size = 1
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(00ff99ee) rgba(33ccffee) 45deg
@@ -168,7 +162,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -195,6 +189,9 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -250,12 +247,12 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-workspace = 1, default:true, border:false, persistent:true, monitor:DP-1
-workspace = 2, border:false, monitor:DP-1
+workspace = 1, monitor:DP-1
+workspace = 2, monitor:DP-1
 workspace = 3, monitor:DP-1
 workspace = 4, monitor:DP-1
 workspace = 5, monitor:DP-1
-workspace = 6, default:true, border:false, monitor:eDP-1
+workspace = 6, monitor:DP-1
 workspace = 7, monitor:eDP-1
 workspace = 8, monitor:eDP-1
 workspace = 9, monitor:eDP-1
@@ -273,4 +270,4 @@ workspace = 10, monitor:eDP-1
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 ##exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = dbus-update-activation-environment --systemd --all
+##exec-once = dbus-update-activation-environment --systemd --all
