--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 # source = ~/.config/hypr/myColors.conf
+source=~/.config/hypr/mocha.conf
 
 ################
 ### MONITORS ###
@@ -182,6 +183,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod Control, Q, exec, hyprlock
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
