--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -39,7 +39,10 @@ $menu = rofi -show drun
 
 exec-once = ~/.config/hypr/scripts/once.sh
 exec-once = [workspace 1 silent] $terminal
+exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 7 silent] $browser
+#exec-once = sleep 1 && hyprctl dispatch workspace 1
+exec-once = hyprctl dispatch focusmonitor DP-1 && hyprctl dispatch workspace 1
 
 ##systemctl --user enable --now hypridle.service
 
