hyprland, hyprpaper and hyprlock
images and settings

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -13,14 +13,14 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = ~/Pictures/wallpaper/arch-wal-1.jpg
+  path = ~/.config/hypr/wallpaper/lock.png
   blur_passes = 1
-  blur_size = 2
-  noise = 0.0117
-  contrast = 0.8916
-  brightness = 0.8172
-  vibrancy = 0.1696
-  vibrancy_darkness = 0.0
+  blur_size = 6
+  # noise = 0.0117
+  # contrast = 0.8916
+  # brightness = 0.8172
+  # vibrancy = 0.1696
+  # vibrancy_darkness = 0.0
   #color = $base
 }
 
@@ -63,8 +63,7 @@ label {
 # USER AVATAR
 image {
   monitor =
-  #path = $HOME/.face/gray0_ctp_on_line.png
-  #path = $HOME/.face/gray0_ctp_on_line.png
+  #path = $HOME/.face
   size = 100
   border_color = $accent
   position = 0, 75
