--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/wallpaper/default.jpg
-wallpaper = ,~/Pictures/wallpaper/default.jpg
+preload = ~/.config/hypr/wallpaper/default.jpg
+wallpaper = ,~/.config/hypr/wallpaper/default.jpg
