--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,7 +22,8 @@ monitor=DP-1,3840x2560@59.98400,auto,1.33334
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-$terminal = alacritty
+# $terminal = alacritty
+$terminal = kitty
 $fileManager = thunar
 $browser = firefox
 $menu = rofi -show drun
@@ -40,9 +41,11 @@ $menu = rofi -show drun
 exec-once = ~/.config/hypr/scripts/once.sh
 exec-once = [workspace 1 silent] $terminal
 exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 3 silent] $browser
+exec-once = [workspace 4 silent] $browser
 exec-once = [workspace 7 silent] $browser
 #exec-once = sleep 1 && hyprctl dispatch workspace 1
-exec-once = hyprctl dispatch focusmonitor DP-1 && hyprctl dispatch workspace 1
+# exec-once = hyprctl dispatch focusmonitor DP-1 && hyprctl dispatch workspace 1
 
 ##systemctl --user enable --now hypridle.service
 
@@ -100,10 +103,10 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 6
-        passes = 2
-
-        vibrancy = 0.1696
+        size = 9
+        passes = 3
+        new_optimizations=true
+        # vibrancy = 0.1696
     }
 }
 
@@ -186,6 +189,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, F, exec, $browser
 bind = $mainMod Control, Q, exec, hyprlock
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
@@ -276,3 +280,4 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 ##exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 ##exec-once = dbus-update-activation-environment --systemd --all
+# layerrule = blur,waybar
