--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -40,8 +40,9 @@
       // "default": "",
     },
     "persistent-workspaces": {
-      "DP-1": [1, 2, 3, 4, 5, 6],
-      "eDP-1": [7, 8, 9, 10]
+      "*": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+      // "DP-1": [1, 2, 3, 4, 5, 6],
+      // "eDP-1": [7, 8, 9, 10]
     }
   },
   "cpu": {
