apps not opening in correct workspace!

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -40,10 +40,10 @@ $menu = rofi -show drun
 
 exec-once = ~/.config/hypr/scripts/once.sh
 exec-once = [workspace 1 silent] $terminal
-exec-once = [workspace 2 silent] $terminal
-exec-once = [workspace 3 silent] $browser
-exec-once = [workspace 4 silent] $browser
-exec-once = [workspace 7 silent] $browser
+# exec-once = [workspace 2 silent] $terminal
+# exec-once = [workspace 3 silent] $browser
+# exec-once = [workspace 4 silent] $browser
+# exec-once = [workspace 7 silent] $browser
 #exec-once = sleep 1 && hyprctl dispatch workspace 1
 # exec-once = hyprctl dispatch focusmonitor DP-1 && hyprctl dispatch workspace 1
 
