rofi launchers, keybindings and theme
-no wlogout
-rofi powermenu
-rofi firefox profile launcher
-rofi keybindings and menu in waybar
-rofi theme

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -26,7 +26,8 @@ monitor=DP-1,3840x2560@59.98400,auto,1.33334
 $terminal = kitty
 $fileManager = thunar
 $browser = firefox
-$menu = rofi -show drun
+$appmenu = rofi -show drun
+$winmenu = rofi -show window
 #$fileManager = nautilus
 #$fileManager = dolphin
 
@@ -189,13 +190,15 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, F, exec, $browser
+bind = $mainMod, space, exec, $appmenu
+bind = $mainMod, Tab, exec, $winmenu
+bind = $mainMod, F, exec, ~/.config/rofi/scripts/firefox-profiles.sh
+bind = $mainMod, L, exec, ~/.config/rofi/scripts/powermenu.sh
 bind = $mainMod Control, Q, exec, hyprlock
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -281,3 +284,6 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 ##exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 ##exec-once = dbus-update-activation-environment --systemd --all
 # layerrule = blur,waybar
+layerrule = blur,rofi
+layerrule = dimaround,rofi
+# windowrule = rounding 12, ^(rofi)$ # set rounding to 10 for rofi
