--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -40,15 +40,7 @@ $winmenu = rofi -show window
 # Or execute your favorite apps at launch like this:
 
 exec-once = ~/.config/hypr/scripts/once.sh
-exec-once = [workspace 1 silent] $terminal
-# exec-once = [workspace 2 silent] $terminal
-# exec-once = [workspace 3 silent] $browser
-# exec-once = [workspace 4 silent] $browser
-# exec-once = [workspace 7 silent] $browser
-#exec-once = sleep 1 && hyprctl dispatch workspace 1
-# exec-once = hyprctl dispatch focusmonitor DP-1 && hyprctl dispatch workspace 1
-
-##systemctl --user enable --now hypridle.service
+exec-once = ~/.config/hypr/scripts/startup.sh
 
 
 #############################
