--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -78,9 +78,10 @@ bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}" -l 21
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @continuum-restore 'on'
 
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @sessionx-bind 'o'
