hyprland startup again...

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -40,7 +40,10 @@ $winmenu = rofi -show window
 # Or execute your favorite apps at launch like this:
 
 exec-once = ~/.config/hypr/scripts/once.sh
-exec-once = ~/.config/hypr/scripts/startup.sh
+exec-once = [workspace 3] firefox -P default -no-remote https://chatgpt.com
+exec-once = [workspace 2] kitty
+exec-once = [workspace 4] firefox -P test-profile -no-remote https://google.com
+exec-once = [workspace 1] kitty zsh -c '$(tmux attach || tmux)'
 
 
 #############################
