rofi ask sudo pass

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -55,6 +55,7 @@ exec-once = [workspace 1] kitty zsh -c '$(tmux attach || tmux)'
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
+env = SUDO_ASKPASS,$HOME/.config/rofi/scripts/ask-sudo-pass.sh
 
 
 #####################
