--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -1,6 +1,7 @@
 "$schema" = "https://starship.rs/config-schema.json"
 
 format = """
+$os\
 $directory\
 $git_branch\
 $golang\
@@ -14,17 +15,17 @@ $line_break\
 $character"""
 
 palette = "catppuccin_mocha"
-add_newline = true
+add_newline = false
 
 [line_break]
-disabled = false
+disabled = true
 
-# [os]
-# disabled = true
-# format = "[$symbol ](fg:sapphire)"
+[os]
+disabled = false
+format = "[$symbol ](fg:blue)"
 
 [directory]
-format = "[$path ](fg:sapphire)"
+format = "[$path ](fg:peach)"
 truncate_to_repo = true
 truncation_length = 5
 
@@ -41,11 +42,11 @@ format = "[$symbol ](fg:teal)"
 
 [golang]
 symbol = ""
-format = "[$symbol ](fg:sky)"
+format = "[$symbol ](fg:sapphire)"
 
 [python]
 symbol = ""
-format = '[$symbol (\($virtualenv\) )](fg:sapphire)'
+format = '[$symbol (\($virtualenv\) )](fg:lavender)'
 
 [terraform]
 symbol = "󱁢"
@@ -61,8 +62,8 @@ format="[$duration ](fg:flamingo)"
 show_milliseconds = false
 
 [character]
-# success_symbol = "[](bold fg:green)"
-success_symbol = "[󰣇](bold fg:blue)"
+success_symbol = "[](bold fg:text)"
+# success_symbol = "[󰣇](bold fg:blue)"
 error_symbol = "[󰣇](bold fg:red)"
 vimcmd_symbol = "[](bold fg:sapphire)"
 vimcmd_replace_one_symbol = "[](bold fg:purple)"
