bin dir and scripts
- firefox profile manager
- powermenu
- startup
- waybar modules
- keybindings

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,9 +11,8 @@ source=~/.config/hypr/mocha.conf
 monitor=Unknown-1,disabled
 monitor=eDP-1,2048x1280@60,auto,1
 monitor=DP-1,3840x2560@59.98400,auto,1.33334
-#monitor=HDMI-A-1,1920x1080@59.98400,auto,1
-#monitor=eDP-1,2048x1280@60,auto,1,bitdepth,10
 #monitor=DP-1,3840x2560@60,auto,1.066667
+#monitor=eDP-1,2048x1280@60,auto,1,bitdepth,10
 
 
 ###################
@@ -22,16 +21,6 @@ monitor=DP-1,3840x2560@59.98400,auto,1.33334
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# $terminal = alacritty
-$terminal = kitty
-$fileManager = thunar
-$browser = firefox
-$appmenu = rofi -show drun
-$winmenu = rofi -show window
-#$fileManager = nautilus
-#$fileManager = dolphin
-
-
 #################
 ### AUTOSTART ###
 #################
@@ -39,11 +28,9 @@ $winmenu = rofi -show window
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = ~/.config/hypr/scripts/once.sh
-exec-once = [workspace 3] firefox -P default -no-remote https://chatgpt.com
-exec-once = [workspace 2] kitty
-exec-once = [workspace 4] firefox -P test-profile -no-remote https://google.com
+exec-once = ~/bin/s-hypr-startup-once
 exec-once = [workspace 1] kitty zsh -c '$(tmux attach || tmux)'
+exec-once = [workspace 2] ~/bin/s-firefox-profile-manager personal
 
 
 #############################
@@ -55,7 +42,8 @@ exec-once = [workspace 1] kitty zsh -c '$(tmux attach || tmux)'
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
-env = SUDO_ASKPASS,$HOME/.config/rofi/scripts/ask-sudo-pass.sh
+env = MOZ_ENABLE_WAYLAND,1
+env = SUDO_ASKPASS,$HOME/bin/s-sudo-askpass
 
 
 #####################
@@ -185,15 +173,15 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, space, exec, $appmenu
-bind = $mainMod, Tab, exec, $winmenu
-bind = $mainMod, F, exec, ~/.config/rofi/scripts/firefox-profiles.sh
-bind = $mainMod, L, exec, ~/.config/rofi/scripts/powermenu.sh
+bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, space, exec, rofi -show drun -theme-str "window {width: 693px;}"
+bind = $mainMod, Tab, exec, rofi -show window -no-fixed-num-lines -theme-str "window {width: 777px;}"
+bind = $mainMod, F, exec, ~/bin/s-firefox-profile-manager
+bind = $mainMod, L, exec, ~/bin/s-powermenu
 bind = $mainMod Control, Q, exec, hyprlock
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
