--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -42,8 +42,8 @@ exec-once = [workspace 2] ~/bin/s-firefox-profile-manager personal
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
-env = MOZ_ENABLE_WAYLAND,1
-env = SUDO_ASKPASS,$HOME/bin/s-sudo-askpass
+# env = MOZ_ENABLE_WAYLAND,1
+# env = SUDO_ASKPASS,$HOME/bin/s-sudo-askpass
 
 
 #####################
