--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -190,6 +190,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, space, exec, rofi -show drun -theme-str "window {width: 693px;}"
 bind = $mainMod, Tab, exec, rofi -show window -no-fixed-num-lines -theme-str "window {width: 777px;}"
+bind = $mainMod, C, exec, ~/bin/s-cliphist
 bind = $mainMod, F, exec, ~/bin/s-firefox-profile-manager
 bind = $mainMod, L, exec, ~/bin/s-powermenu
 bind = $mainMod Control, Q, exec, hyprlock
