rofi scripts and config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,9 +28,9 @@ monitor=DP-1,3840x2560@59.98400,auto,1.33334
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = ~/bin/s-hypr-startup-once
+exec-once = ~/.config/hypr/startup-once.sh
 exec-once = [workspace 1] kitty zsh -c '$(tmux attach || tmux)'
-exec-once = [workspace 2] ~/bin/s-firefox-profile-manager personal
+exec-once = [workspace 2] ~/.config/rofi/firefox-profiles.sh personal
 
 
 #############################
@@ -188,11 +188,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, space, exec, rofi -show drun -theme-str "window {width: 693px;}"
-bind = $mainMod, Tab, exec, rofi -show window -no-fixed-num-lines -theme-str "window {width: 777px;}"
-bind = $mainMod, C, exec, ~/bin/s-cliphist
-bind = $mainMod, F, exec, ~/bin/s-firefox-profile-manager
-bind = $mainMod, L, exec, ~/bin/s-powermenu
+bind = $mainMod, space, exec, rofi -show drun -config ~/.config/rofi/drun.rasi
+bind = $mainMod, Tab, exec, rofi -show window -config ~/.config/rofi/window.rasi
+# bind = $mainMod, Tab, exec, rofi -show window -no-fixed-num-lines -theme-str "window {width: 777px;}"
+bind = $mainMod, C, exec, ~/.config/rofi/cliphist.sh
+bind = $mainMod, F, exec, ~/.config/rofi/firefox-profiles.sh
+bind = $mainMod, L, exec, ~/.config/rofi/powermenu.sh
 bind = $mainMod Control, Q, exec, hyprlock
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
