--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -42,11 +42,8 @@ exec-once = [workspace 2] ~/.config/rofi/firefox-profiles.sh personal
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
-# env = MOZ_ENABLE_WAYLAND,1
-# env = SUDO_ASKPASS,$HOME/bin/s-sudo-askpass
 
 env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 
@@ -190,7 +187,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, space, exec, rofi -show drun -config ~/.config/rofi/drun.rasi
 bind = $mainMod, Tab, exec, rofi -show window -config ~/.config/rofi/window.rasi
-# bind = $mainMod, Tab, exec, rofi -show window -no-fixed-num-lines -theme-str "window {width: 777px;}"
 bind = $mainMod, C, exec, ~/.config/rofi/cliphist.sh
 bind = $mainMod, F, exec, ~/.config/rofi/firefox-profiles.sh
 bind = $mainMod, L, exec, ~/.config/rofi/powermenu.sh
@@ -203,7 +199,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)"
+bind = $mainMod Control, S, exec, grim -g "$(slurp)" -t jpeg -q 100
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
