hyprland window rules
apps on specific workspace

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -284,4 +284,6 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # layerrule = blur,waybar
 layerrule = blur,rofi
 layerrule = dimaround,rofi
+windowrule = workspace 10, ^(1Password)$
+windowrule = workspace 9, ^(org.telegram.desktop)$
 # windowrule = rounding 12, ^(rofi)$ # set rounding to 10 for rofi
