waybar and tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Make sure that colors in tmux are the same as without tmux
 set -sa terminal-features ',*:RGB'
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -ga terminal-features ",*:usstyle"
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[3 q'
 # Set cursor style
@@ -81,7 +81,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @sessionx-bind 'o'
@@ -94,19 +94,20 @@ set -g @sessionx-preview-enabled 'false'
 set -g @plugin 'catppuccin/tmux#latest'
 set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
 set -g @catppuccin_status_background "default"
-set -g @catppuccin_status_modules_right "user date_time"
+set -g @catppuccin_status_modules_right "user"
+# set -g @catppuccin_status_modules_right "user date_time"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_status_default "on"
+set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_status_default "on"
 set -g @catppuccin_status_justify "centre"
 set -g @catppuccin_window_status "icon"
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_left_separator " "
+set -g @catppuccin_window_right_separator ""
+set -g @catppuccin_window_middle_separator "█ "
+set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
