--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -33,18 +33,18 @@
     "sort-by-name": true,
     "format": " {name} {icon} ",
     "format-icons": {
-      "1": "",
-      "2": "",
+      // "1": "",
+      // "2": "",
       // "3": "󱋊",
       // "7": "󰊻",
-      "default": ""
-      // "active": "",
+      "default": "",
+      "active": ""
       // "default": ""
     },
     "persistent-workspaces": {
-      // "*": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-      "DP-1": [1, 2, 3, 4, 5, 6],
-      "eDP-1": [7, 8, 9, 10]
+      "*": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+      // "DP-1": [1, 2, 3, 4, 5, 6],
+      // "eDP-1": [7, 8, 9, 10]
     }
   },
   "temperature": {
@@ -128,8 +128,8 @@
   "clock": {
     "timezone": "Europe/Berlin",
     "tooltip-format": "<big>{:%d %Y %B}</big>\n<tt>{calendar}</tt>",
-    "format-alt": " {:%Y-%m-%d %H:%M}",
-    "format": " {:%H:%M}"
+    "format": " {:%Y-%m-%d %H:%M}",
+    "format-alt": " {:%H:%M}"
   },
   "custom/power": {
     "tooltip-format": "Power",
