kitty reset zoom keymap

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 # https://github.com/CodyReichert/dotfiles/blob/master/kitty/.config/kitty/kitty.conf
 
+map ctrl+shift+0 change_font_size all 0
+
 background_opacity 0.84
 
 font_family      MesloLGM Mono
