wallpaper and lockscreen

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -13,14 +13,14 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = ~/.config/hypr/wallpaper/lock.png
-  blur_passes = 1
+  path = ~/.config/hypr/wallpaper/saturn-rings.jpg
+  blur_passes = 3
   blur_size = 6
+  brightness = 0.3172
   # noise = 0.0117
   # contrast = 0.8916
-  # brightness = 0.8172
   # vibrancy = 0.1696
-  # vibrancy_darkness = 0.0
+  # vibrancy_darkness = 0.3
   #color = $base
 }
 
@@ -29,7 +29,7 @@ label {
   monitor =
   text = Layout: $LAYOUT
   color = $text
-  font_size = 25
+  font_size = 18
   font_family = $font
   position = 30, -30
   halign = left
@@ -74,10 +74,10 @@ image {
 # INPUT FIELD
 input-field {
   monitor =
-  size = 333, 66
-  outline_thickness = 2
-  rounding = 9 # -1 means complete rounding (circle/oval)
-  dots_size = 0.2
+  size = 369, 69
+  outline_thickness = 1
+  rounding = 6 # -1 means complete rounding (circle/oval)
+  dots_size = 0.1
   dots_spacing = 0.2
   dots_center = true
   outer_color = $accent
