--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -43,7 +43,6 @@ exec-once = [workspace 2] ~/.config/rofi/firefox-profiles.sh personal
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = XDG_CURRENT_DESKTOP,Hyprland
 
 env = GDK_BACKEND,wayland,x11,*
 env = SDL_VIDEODRIVER,wayland
@@ -92,6 +91,9 @@ decoration {
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
+
+    # dim_inactive = true
+    # dim_strength = 0.24
 
     drop_shadow = true
     shadow_range = 4
